// =============================================================================
// ESQUEMA: core — Identidad, accesos, auditoría y notificaciones (BASE)
// Diagrama ER autónomo de este esquema. Render: https://dbdiagram.io
//
// core no depende de otros esquemas → todas las refs son intra-core (ref: reales).
// El agregado completo está en postgres/tables.dbml.
// =============================================================================

Project app_base_core {
  database_type: 'PostgreSQL'
  Note: 'Esquema core — Plantilla base CorAll.'
}

// ── ENUMs ────────────────────────────────────────────────────────────────────

// Motivo por el que una sesión dejó de estar activa.
Enum core.enum_session_revoke_reason {
  LOGOUT          [note: 'El usuario cerró sesión en ese dispositivo']
  MANUAL          [note: 'Cerrada por el usuario desde "Sesiones"']
  PASSWORD_CHANGE [note: 'Cambio/restablecimiento de contraseña']
  REUSE_DETECTED  [note: 'Refresh token ya rotado (posible robo)']
  ADMIN           [note: 'Cierre forzado por un administrador']
}

// ── Tablas ───────────────────────────────────────────────────────────────────

Table core.permissions {
  id          serial       [pk]
  name        varchar(100) [not null]
  slug        varchar(100) [not null, unique]
  description text
  status      boolean      [default: true]
  user_cr     integer
  token_cr    uuid
  date_cr     bigint       [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up     integer
  token_up    uuid
  date_up     bigint
  Note: 'Catálogo de permisos (slug). Sincronizado con core/permissions.constants.ts'
}

Table core.users {
  id            serial       [pk]
  first_name    varchar(100) [not null]
  last_name     varchar(100) [not null]
  email         varchar(150) [not null]
  password_hash varchar(255) [not null]
  phone         varchar(20)
  foto_url      varchar(500)
  last_login    bigint
  dni           varchar(20)
  cargo         varchar(150)
  enable        boolean      [default: true, note: 'Activo / Inactivo']
  status        boolean      [default: true, note: 'Visible (soft delete) / Hidden']
  user_cr       integer
  token_cr      uuid
  date_cr       bigint       [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up       integer
  token_up      uuid
  date_up       bigint
}

Table core.roles {
  id          serial           [pk]
  name        varchar(100)     [not null]
  description text
  is_system   boolean          [default: false]
  enable      boolean          [default: true]
  status      boolean          [default: true]
  user_cr     integer
  token_cr    uuid
  date_cr     bigint           [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up     integer
  token_up    uuid
  date_up     bigint
}

Table core.role_permissions {
  id            serial  [pk]
  role_id       integer [not null, ref: > core.roles.id]
  permission_id integer [not null, ref: > core.permissions.id]
  status        boolean [default: true]
  user_cr       integer
  token_cr      uuid
  date_cr       bigint  [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up       integer
  token_up      uuid
  date_up       bigint

  indexes {
    (role_id, permission_id) [unique]
  }
}

Table core.user_roles {
  id       serial  [pk]
  user_id  integer [not null, ref: > core.users.id]
  role_id  integer [not null, ref: > core.roles.id]
  status   boolean [default: true]
  user_cr  integer
  token_cr uuid
  date_cr  bigint  [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  user_up  integer
  token_up uuid
  date_up  bigint

  indexes {
    (user_id, role_id) [unique]
  }
}

// La bitácora de auditoría NO vive en core: es un esquema transversal propio.
// Ver postgres/auditoria/auditoria-tables.dbml.

Table core.notifications {
  id         uuid         [pk, default: `uuidv7()`]
  user_id    integer      [not null, ref: > core.users.id]
  title      varchar(150) [not null]
  message    text         [not null]
  type       varchar(30)  [not null]
  module     varchar(50)
  link       varchar(255)
  is_read    boolean      [default: false]
  created_at timestamptz  [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, is_read)
  }
  Note: 'Notificaciones del sistema (campana de notificaciones).'
}

Table core.password_recovery {
  id            serial       [pk]
  user_id       integer      [not null, ref: > core.users.id]
  recovery_code varchar(6)   [not null]
  email         varchar(150) [not null]
  expires_at    bigint       [not null]
  used          boolean      [default: false]
  attempts      integer      [default: 0]
  created_at    bigint       [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  used_at       bigint

  indexes {
    recovery_code
    user_id
    email
  }
  Note: 'Códigos de recuperación de contraseña de usuarios internos (intranet).'
}

Table core.user_sessions {
  id                 uuid         [pk, default: `uuidv7()`]
  user_id            integer      [not null, ref: > core.users.id]
  refresh_hash       "char(64)"   [not null, note: 'SHA-256 del refresh vigente']
  ip_address         varchar(45)
  user_agent         varchar(300)
  device             varchar(120) [note: 'Etiqueta legible, p.ej. Chrome · Windows']
  date_cr            bigint       [default: `EXTRACT(EPOCH FROM NOW())::BIGINT`]
  last_used_at       bigint
  expires_at         bigint       [not null]
  revoked_at         bigint
  revoked_reason     core.enum_session_revoke_reason
  revoked_by_user    integer      [note: 'Quién la cerró (usuario o admin)']
  revoked_by_session uuid         [note: 'Desde qué sesión se cerró']

  indexes {
    user_id
    refresh_hash
  }
  Note: 'Sesiones abiertas (refresh token rotativo). El id es el sid del access token y el token_cr/token_up del resto de tablas. Tabla de evento: sin bloque de auditoría.'
}

TableGroup core {
  core.permissions
  core.users
  core.roles
  core.role_permissions
  core.user_roles
  core.notifications
  core.password_recovery
  core.user_sessions
}
